# Mew-Code

./: .gitignore  AGENTS.md  CLAUDE.md  hello.txt  pyproject.toml  task.md
.mewcode/: config.yaml.example
.novacode/: settings.yaml.example
docs/ch02/: checklist.md  plan.md  spec.md  task.md
docs/ch03/: 工具系统 Checklist.md  工具系统 Plan.md  工具系统 Spec.md  工具系统 Tasks.md
docs/ch04/: Agent Loop Checklist.md  Agent Loop Plan.md  Agent Loop Spec.md  Agent Loop Tasks.md
docs/ch05/: 系统提示工程化 Checklist.md  系统提示工程化 Plan.md  系统提示工程化 Spec.md  系统提示工程化 Tasks.md
docs/ch06/: 权限系统 Checklist.md  权限系统 Plan.md  权限系统 Spec.md  权限系统 Tasks.md
examples/: smoke.py
src/mewcode/: __main__.py  cli.py  config.py  conversation.py  prompt.py
src/mewcode/agent/: __init__.py
src/mewcode/llm/: __init__.py  anthropic_provider.py  openai_provider.py
src/mewcode/tool/: __init__.py  bash.py  edit_file.py  glob_tool.py  grep_tool.py  read_file.py  write_file.py
src/mewcode/tui/: app.py
src/novacode/: __main__.py  cli.py  config.py  conversation.py  prompt.py
src/novacode/agent/: __init__.py
src/novacode/llm/: __init__.py  anthropic_provider.py  openai_provider.py
src/novacode/permission/: __init__.py  blacklist.py  engine.py  persist.py  rule.py  sandbox.py  sensitive.py  settings.py
src/novacode/prompt/: __init__.py  environment.py  modules.py  reminder.py
src/novacode/tool/: __init__.py  bash.py  (+5 more)
tests/: test_agent.py  test_anthropic_system.py  test_config.py  test_conversation.py  test_permission.py  test_prompt.py  test_sensitive_permission.py  test_tool.py  test_tui.py
(+4 files in other folders)
