[project]
name = "mewcode"
version = "0.1.0"
description = "MewCode — a terminal AI coding assistant"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80",
    "rich>=13",
    "anthropic>=0.40",
    "openai>=1.50",
    "pyyaml>=6",
]

[project.scripts]
mew = "mewcode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mewcode"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
