[project]
name = "novacode"
version = "0.1.2"
description = "NovaCode — a terminal AI coding assistant"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80",
    "rich>=13",
    "anthropic>=0.40",
    "openai>=1.50",
    "pyyaml>=6",
]

[project.scripts]
nova = "novacode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/novacode"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
